[tool.poetry]
name = "my_playbook_repo"
version = "0.0.1"
description = ""
authors = ["wahaj <wahaj.ali@xgrid.co>"]

# if playbook requires additional dependencies
[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
robusta-cli = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
